--- a/src/App.scss
+++ b/src/App.scss
@@ -60,7 +60,7 @@ header {
       margin: 10px 0;
       color: white;
       border-radius: 3px;
-      padding: 0 10px;
+      padding: 5px 10px;
       font-size: 0.8rem;
       cursor: pointer;
       position: relative;
